; ModuleID = '/home/carl/AnghaBench/Atlas/src/extr_network-backend.c_append_key.c'
source_filename = "/home/carl/AnghaBench/Atlas/src/extr_network-backend.c_append_key.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [3 x i8] c"%u\00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c".%u\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @append_key(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %9 = load i32*, i32** %6, align 8
  %10 = call i32 @g_string_append_c(i32* %9, i8 signext 44)
  %11 = load i32*, i32** %4, align 8
  %12 = load i32, i32* %11, align 4
  store i32 %12, i32* %7, align 4
  %13 = load i32*, i32** %6, align 8
  %14 = load i32, i32* %7, align 4
  %15 = and i32 %14, 255
  %16 = call i32 @g_string_append_printf(i32* %13, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i32 %15)
  store i32 1, i32* %8, align 4
  br label %17

17:                                               ; preds = %27, %3
  %18 = load i32, i32* %8, align 4
  %19 = icmp sle i32 %18, 3
  br i1 %19, label %20, label %30

20:                                               ; preds = %17
  %21 = load i32, i32* %7, align 4
  %22 = ashr i32 %21, 8
  store i32 %22, i32* %7, align 4
  %23 = load i32*, i32** %6, align 8
  %24 = load i32, i32* %7, align 4
  %25 = and i32 %24, 255
  %26 = call i32 @g_string_append_printf(i32* %23, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0), i32 %25)
  br label %27

27:                                               ; preds = %20
  %28 = load i32, i32* %8, align 4
  %29 = add nsw i32 %28, 1
  store i32 %29, i32* %8, align 4
  br label %17

30:                                               ; preds = %17
  ret void
}

declare dso_local i32 @g_string_append_c(i32*, i8 signext) #1

declare dso_local i32 @g_string_append_printf(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
